# Zach-scripty

./: .gitignore  0001_safe_cerise.sql  Analytics.tsx  App.tsx  Customers.tsx  Home.tsx  Orders.tsx  README.md  Settings.tsx  app.css  app.js  build.bat  build.sh  client.py  db.ts  diner_pos.py  employee_management_system_onboarding-1.html  index.css  index.html  package-lock.json  package.bat  package.json  pos-layout.json  pyproject.toml  requirements.txt  routers.ts  run_tracker.py  schema.ts  server.py  shared.py  standalone_ticker.py  todo.md  tsconfig.json
apps/api/: main.py
apps/web/: app.js  index.html  styles.css
docs/: compliance.md
scripts/: build_and_run_ashenfall.bat  validate.cjs
src/: App.tsx  const.ts  index.css  main.tsx
src/components/: ErrorBoundary.tsx
src/contexts/: ThemeContext.tsx
src/engine3d/: __init__.py  cli.py  core.py  game.py  subsystems.py
src/lib/: trpc.ts
src/pages/: Analytics.tsx  Customers.tsx  Home.tsx  NotFound.tsx  Orders.tsx  Settings.tsx
src/rpgclient/: AudioManager.java  ClientConnection.java  ClientPathfinding.java  GamePanel.java  LoginPanel.java  RpgClientApp.java  TileAtlas.java  TutorialDialog.java  WorldView.java
src/rpgserver/: AccountStore.java  GameServer.java  Monster.java  Npc.java  Pathfinding.java  ResourceNode.java  ServerPlayer.java  World.java
src/rpgshared/: EntityState.java  Enums.java  Equipment.java  Inventory.java  ItemStack.java  NetMessage.java  (+2 more)
tests/: test_engine.py  test_tracker.py
webapp/: app.js  index.html  styles.css
zachary_tracker/: main.py  models.py  storage.py
(+20 files in other folders)
