[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-aaa-engine-skeleton"
version = "0.2.0"
description = "AAA-style Python 3D engine architecture with a survival game title prototype"
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
ashenfall = "engine3d.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
